--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-  <!-- Navbar -->
+ 
   <header class="navbar">
     <a href="{% url 'home' %}" class="brand-logo">
      Kids World <span class="rotating-star">⭐</span>
@@ -16,11 +16,11 @@
     <ul>
       <li><a href="{% url 'home' %}">Home</a></li>
       {% if user.is_authenticated %}
-        <li><a href="{% url 'dashboard' %}">Dashboard</a></li> 
-        <li><a href="{% url 'kid_create' %}">Add a Kid</a></li>
-        <li><a href="{% url 'kid_index' %}">View All Kids</a></li>
-        <li><a href="{% url 'games_create' %}">Add a Game</a></li>
-        <li><a href="{% url 'index' %}">View All Games</a></li>
+        <li><a href="{% url 'dashboard' %}" class="active" >Dashboard</a></li> 
+        <!-- <li><a href="{% url 'kid_create' %}">Add a Kid</a></li> -->
+        <li><a href="{% url 'kid_index' %}">Kids</a></li>
+        <!-- <li><a href="{% url 'games_create' %}">Add a Game</a></li> -->
+        <li><a href="{% url 'index' %}">Games</a></li>
         <li>
         <a href="{% url 'logout' %}" 
           onclick="event.preventDefault(); document.getElementById('logout-form').submit();">
