--- a/main_app/templates/games/index.html
+++ b/main_app/templates/games/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
+
+
+  <a href="{% url 'games_create' %}" class="btn add-game-btn">Add Game</a>
+
   <h1 style="text-align:center; color:#5d3a99;">Games List</h1>
 
   <div class="cards-container">
