--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -3,14 +3,14 @@
 
 {% block content %}
 
-<!-- <h1 class="center align">Home Page</h1> -->
+
 <hr/>
 
-<!-- صورة Home بحجم محدد وطبقة شفافة -->
+<!-- home css inline-->
 <div class="home-image" style="
     position:relative; 
     text-align:center; 
-    margin:20px auto; 
+    margin:100px auto 20px auto;
     width:80%; 
     max-width:800px; 
     height:400px;             
