--- a/main_app/templates/main_app/kids_list.html
+++ b/main_app/templates/main_app/kids_list.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
+ <a href="{% url 'kid_create' %}" class="btn add-kid-btn">Add Kidd</a>
+
 <h1 class="page-title">Kid List</h1>
 
 <div class="card-container">
