--- a/main_app/templates/dashboard.html
+++ b/main_app/templates/dashboard.html
@@ -11,7 +11,7 @@
        <!-- Card Image -->
       <div class="card-image" style="width:150px;height:150px;overflow:hidden;border-radius:12px;margin:0 auto 10px;">
         <img 
-          src="{% static game.game_image|cut:'main_app/static/' %}" 
+          src="{{ game.game_image.url }}" 
           alt="{{ game.game_name }}" 
           style="width:100%;height:100%;object-fit:cover;display:block;border-radius:12px;">
       </div>
