--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -20,7 +20,7 @@
 
   
   <img 
-    src="{% static '/images/kidsWorld.jpeg' %}" 
+    src="{% static '/images/disneyland-paris.jpg' %}" 
     alt="Kids World" 
     style="
         width:100%; 
